# windows_liquid_tablet

./: .gitignore  AGENTS.md  AGENTS_ipad_windows_liquid_tablet.md  CMakeLists.txt  README.md
windows/hid_driver_optional/: CMakeLists.txt  README.md  WindowsLiquidTabletHidPen.sln  WindowsLiquidTabletHidPen.vcxproj
windows/hid_driver_optional/inf/: windows_liquid_tablet_hid.inf
windows/hid_driver_optional/src/: driver_entry.cpp  hid_device_state.cpp  hid_device_state.h  hid_report_descriptor.cpp  hid_report_descriptor.h  hid_request_handler.cpp  hid_request_handler.h
windows/hid_driver_optional/tests/: hid_device_state_test.cpp  hid_report_descriptor_test.cpp  hid_request_handler_test.cpp
windows/host/: CMakeLists.txt
windows/host/src/: main.cpp
windows/host/src/app/: debug_stroke.cpp  debug_stroke.h  host_build_info.cpp  host_build_info.h  host_cli.cpp  host_cli.h  host_runtime.cpp  host_runtime.h  host_session_runtime.cpp  host_session_runtime.h  pen_input_runtime.cpp  pen_input_runtime.h  video_pipeline.cpp  video_pipeline.h  video_streaming_runtime.cpp  video_streaming_runtime.h
windows/host/src/capture/: README.md  desktop_duplication_capture_win32.cpp  desktop_duplication_capture_win32.h  desktop_duplication_output_selection.cpp  generated_video_capture_source.cpp  generated_video_capture_source.h  video_capture.h  video_frame.h  windows_graphics_capture_win32.cpp  windows_graphics_capture_win32.h
windows/host/src/codec/: README.md  h264_encoder_config.cpp  h264_encoder_config.h  latest_frame_queue.cpp  latest_frame_queue.h  media_foundation_h264_encoder_win32.cpp  media_foundation_h264_encoder_win32.h  streaming_mode.cpp  streaming_mode.h  video_encoder.h
windows/host/src/diagnostics/: README.md  diagnostic_log.cpp  diagnostic_log.h  diagnostic_log_file_writer.cpp  diagnostic_log_file_writer.h  end_to_end_latency.cpp  end_to_end_latency.h  fps_counter.cpp  fps_counter.h  latency_report_formatter.cpp  latency_report_formatter.h  latency_stats.cpp  latency_stats.h  runtime_diagnostics.cpp  runtime_diagnostics.h  sequence_tracker.cpp  sequence_tracker.h  stage_latency_telemetry.cpp  stage_latency_telemetry.h
windows/host/src/input/: README.md  hid_device_path_list.cpp  hid_device_path_list.h  hid_device_path_list_win32.cpp  hid_pen_report_writer.cpp  hid_pen_report_writer.h  hid_pen_report_writer_win32.cpp  keyboard_shortcut_sink.cpp  keyboard_shortcut_sink.h  keyboard_shortcut_sink_win32.cpp  pen_injector.h  pen_session.cpp  pen_session.h  synthetic_pen.cpp  synthetic_pen.h  synthetic_pen_win32.cpp
windows/host/src/mapping/: README.md  calibration_pattern.cpp  calibration_pattern.h  calibration_session.cpp  calibration_session.h  coordinate_mapping.cpp  coordinate_mapping.h  display_layout.cpp  display_layout.h  display_mapping.cpp  display_mapping.h  pen_mapping.h  pressure_curve.cpp  pressure_curve.h  win32_display_layout.cpp  win32_display_layout.h
windows/host/src/net/: README.md  byte_stream.h  discovery_advertisement.cpp  discovery_advertisement.h  discovery_broadcaster.cpp  discovery_broadcaster.h  fake_ipad_packet_generator.cpp  fake_ipad_packet_generator.h  input_packet_stream.cpp  input_packet_stream.h  loopback_byte_stream.cpp  loopback_byte_stream.h  loopback_video_sender.cpp  loopback_video_sender.h  mdns_discovery_advertisement.cpp  mdns_discovery_advertisement.h  mdns_discovery_broadcaster_win32.cpp  mdns_discovery_broadcaster_win32.h  pen_input_connection.cpp  pen_input_connection.h  pen_input_receiver.cpp  pen_input_receiver.h  pen_packet_fuzz_corpus.cpp  pen_packet_fuzz_corpus.h  pen_packet_parser.cpp  pen_packet_parser.h  pen_packet_stream.cpp  pen_packet_stream.h  shortcut_input_receiver.cpp  shortcut_input_receiver.h  shortcut_packet_parser.cpp  shortcut_packet_parser.h  tcp_byte_stream_win32.cpp  tcp_byte_stream_win32.h  tcp_endpoint.cpp  (+10 more)
windows/host/tests/: calibration_pattern_test.cpp  calibration_session_test.cpp  coordinate_mapping_test.cpp  debug_stroke_test.cpp  desktop_duplication_capture_config_test.cpp  diagnostic_log_file_writer_test.cpp  diagnostic_log_test.cpp  discovery_advertisement_test.cpp  discovery_broadcaster_config_test.cpp  display_layout_test.cpp  display_mapping_test.cpp  end_to_end_latency_test.cpp  fake_ipad_packet_generator_test.cpp  fps_counter_test.cpp  generated_video_capture_source_test.cpp  h264_encoder_config_test.cpp  hid_device_path_list_test.cpp  hid_pen_report_writer_test.cpp  host_cli_test.cpp  host_runtime_test.cpp  host_session_runtime_test.cpp  host_smoke_test.cpp  input_packet_stream_test.cpp  keyboard_shortcut_sink_test.cpp  latency_report_formatter_test.cpp  latency_stats_test.cpp  latest_frame_queue_test.cpp  loopback_byte_stream_test.cpp  loopback_video_sender_test.cpp  mdns_discovery_advertisement_test.cpp  pen_input_connection_test.cpp  pen_input_receiver_test.cpp  pen_input_runtime_test.cpp  pen_packet_fuzz_corpus_test.cpp  pen_packet_parser_test.cpp  pen_packet_stream_test.cpp  pen_session_test.cpp  pressure_curve_test.cpp  runtime_diagnostics_test.cpp  sequence_tracker_test.cpp  (+12 more)
windows/idd_driver/: CMakeLists.txt  README.md  WindowsLiquidTabletIdd.sln  WindowsLiquidTabletIdd.vcxproj
windows/idd_driver/inf/: windows_liquid_tablet_idd.inf
windows/idd_driver/src/: driver_entry.cpp  iddcx_device_add_flow.cpp  iddcx_device_add_flow.h  iddcx_device_add_status.cpp  iddcx_device_add_status.h  iddcx_driver_start.cpp  iddcx_driver_start.h  iddcx_monitor_registration.cpp  iddcx_monitor_registration.h  iddcx_monitor_report.cpp  iddcx_monitor_report.h  iddcx_ntstatus_bridge.cpp  iddcx_ntstatus_bridge.h  virtual_monitor_descriptor.cpp  virtual_monitor_descriptor.h  virtual_monitor_identity.cpp  virtual_monitor_identity.h  virtual_monitor_modes.cpp  virtual_monitor_modes.h
windows/idd_driver/tests/: iddcx_device_add_flow_test.cpp  iddcx_device_add_status_test.cpp  iddcx_driver_start_test.cpp  iddcx_monitor_registration_test.cpp  iddcx_monitor_report_test.cpp  iddcx_ntstatus_bridge_test.cpp  virtual_monitor_descriptor_test.cpp  virtual_monitor_identity_test.cpp  virtual_monitor_modes_test.cpp
(+306 files in other folders)
